// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorStep should emit onBack 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="ErrorStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-4xl"
          data-testid="header__title"
        >
          Custom error title
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-error-banner.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
    </p>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV"
        data-testid="ErrorStep__wallet-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Back to Wallet
        </div>
      </button>
      <button
        class="Button__StyledButton-mdtvtf-0 ePkfgQ space-x-2"
        data-testid="ErrorStep__repeat-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Retry
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should emit onRepeat 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="ErrorStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-4xl"
          data-testid="header__title"
        >
          Custom error title
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-error-banner.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
    </p>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV"
        data-testid="ErrorStep__wallet-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Back to Wallet
        </div>
      </button>
      <button
        class="Button__StyledButton-mdtvtf-0 ePkfgQ space-x-2"
        data-testid="ErrorStep__repeat-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Retry
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should render with custom title and description 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="ErrorStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-4xl"
          data-testid="header__title"
        >
          Custom error title
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-error-banner.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
    </p>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV"
        data-testid="ErrorStep__wallet-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Back to Wallet
        </div>
      </button>
      <button
        class="Button__StyledButton-mdtvtf-0 ePkfgQ space-x-2"
        data-testid="ErrorStep__repeat-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Retry
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorStep should render with default texts 1`] = `
<DocumentFragment>
  <div
    class="space-y-8"
    data-testid="ErrorStep"
  >
    <div
      class="flex justify-between items-end bg-theme-background"
    >
      <div
        class="space-y-4"
      >
        <h1
          class="mb-0 text-4xl"
          data-testid="header__title"
        >
          Transaction Error
        </h1>
      </div>
    </div>
    <svg
      class="w-full"
    >
      transaction-error-banner.svg
    </svg>
    <p
      class="text-theme-secondary-text"
    >
      An error occurred that prevented the broadcast of this transaction. Select Retry to attempt to broadcast the transaction again. Alternatively, return to your wallet
    </p>
    <div
      class="flex justify-end space-x-3"
    >
      <button
        class="Button__StyledButton-mdtvtf-0 iUSBMV"
        data-testid="ErrorStep__wallet-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Back to Wallet
        </div>
      </button>
      <button
        class="Button__StyledButton-mdtvtf-0 ePkfgQ space-x-2"
        data-testid="ErrorStep__repeat-button"
        type="button"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Retry
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
